Add endpoint to fetch quote like counts
